--- a/source/projects/drink2go.html
+++ b/source/projects/drink2go.html
@@ -37,24 +37,155 @@
             </div>
           </div>
         </section>
-        <section class="project content">
-          <div class="project__container content__container">
-            <h2 class="project__title content__title">О проекте</h2>
+        <section class="project">
+          <div class="project__container">
+            <h2 class="project__title">О проекте</h2>
             <p class="project__description">
               Drink2Go - это интернет-магазин кофейных напитков. Свежесваренный кофе без кофеина из Эфиопии — то, что нужно для расслабления после тяжёлого рабочего дня. Сочетание перуанской высокогорной арабики с молоком ламы и лавандовым сиропом унесёт вас прямо на вершину Радужных гор. А тройной эспрессо из Колумбии, чернее самой тёмной ночи, покажет вам, что такое настоящая бодрость.
             </p>
-            <a class="project__link project__link--site" href="https://dumskiy.github.io/sites/drink2go/" target="_blank">Сайт Drink2go</a>
+            <a class="project__link project__link--site" href="https://dumskiy.github.io/sites/drink2go/" target="_blank">Сайт Drink2Go</a>
             <a class="project__link project__link--github" href="https://github.com/Dumskiy/drink2go" target="_blank">Репозиторий на GitHub</a>
+            <h2 class="project__title">Техническая реализация</h2>
+            <h3 class="project__subtitle">Общая информация</h3>
+            <p class="project__text">
+              Сайт представляет собой совокупность главной страницы и страницы каталога продукции.
+            </p>
+            <p class="project__text">
+              <strong>Стек:</strong> HTML5, CSS3, JavaScript, БЭМ, Sass, Gulp, Swiper.
+            </p>
+            <h3 class="project__subtitle">Адаптивная верстка</h3>
+            <p class="project__text">
+              Для каждой страницы выполнена фиксированная верстка трёх состояний: мобильная, планшетная и десктопная.
+            </p>
+            <div class="project__slider project__slider--nojs slider carousel slide" id="carouselExampleIndicators" data-bs-ride="true">
+              <div class="slider__indicators carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              </div>
+              <div class="slider__inner carousel-inner">
+                <div class="slider__item carousel-item active">
+                  <picture>
+                    <source type="image/webp"
+                      srcset="../img/drink2go-devices-index@1x.webp 1x, ../img/drink2go-devices-index@2x.webp 2x">
+                    <img class="slider__image d-block w-100" src="../img/drink2go-devices-index@1x.png"
+                      srcset="../img/drink2go-devices-index@2x.png 2x" width="1440" height="1224" loading="lazy" alt="Главная страница Дринк Ту Гоу на трех устройствах. Смартфон, планшет, компьютер.">
+                  </picture>
+                </div>
+                <div class="slider__item carousel-item">
+                  <picture>
+                    <source type="image/webp"
+                      srcset="../img/drink2go-devices-catalog@1x.webp 1x, ../img/drink2go-devices-catalog@2x.webp 2x">
+                    <img class="slider__image d-block w-100" src="../img/drink2go-devices-catalog@1x.png"
+                      srcset="../img/drink2go-devices-catalog@2x.png 2x" width="1440" height="1224" loading="lazy" alt="Страница каталога Дринк Ту Гоу на трех устройствах. Смартфон, планшет, компьютер.">
+                  </picture>
+                </div>
+              </div>
+              <button class="slider__button slider__button--prev carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="slider__button slider__button--next carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+            <picture>
+              <source type="image/webp"
+                srcset="../img/drink2go-devices-index@1x.webp 1x, ../img/drink2go-devices-index@2x.webp 2x">
+              <img class="project__image project__image--xl project__image--nojs" src="../img/drink2go-devices-index@1x.png"
+                srcset="../img/drink2go-devices-index@2x.png 2x" width="1440" height="1224" loading="lazy" alt="Главная страница Дринк Ту Гоу на трех устройствах. Смартфон, планшет, компьютер.">
+            </picture>
+            <picture>
+              <source type="image/webp"
+                srcset="../img/drink2go-devices-catalog@1x.webp 1x, ../img/drink2go-devices-catalog@2x.webp 2x">
+              <img class="project__image project__image--xl project__image--nojs" src="../img/drink2go-devices-catalog@1x.png"
+                srcset="../img/drink2go-devices-catalog@2x.png 2x" width="1440" height="1224" loading="lazy" alt="Страница каталога Дринк Ту Гоу на трех устройствах. Смартфон, планшет, компьютер.">
+            </picture>
+            <h3 class="project__subtitle">Разметка и Стилизация</h3>
+            <p class="project__text">
+              Семантическая разметка страниц выполнена на HTML5 с применением методологии БЭМ, и отвечает критериям валидности и доступности.
+            </p>
+            <p class="project__text">
+              Стилизация страниц выполнена на CSS3 c использованием препроцессора Sass (синтаксис SCSS).
+            </p>
+            <h3 class="project__subtitle">Сетки страниц и компонентов</h3>
+            <p class="project__text">
+              Сетки крупных структурных блоков и мелких компонентов построены при помощи Flexbox и Grid Layout, не боятся переполнения контентом, и перестраиваются в зависимости от разрешения экрана устройства пользователя.
+            </p>
+            <h3 class="project__subtitle">Слайдер</h3>
+            <p class="project__text">
+              Слайдер в проекте реализован сторонней библиотекой для создания самых современных мобильных сенсорных слайдеров Swiper.
+            </p>
+            <picture>
+              <source type="image/webp"
+                srcset="../img/drink2go-mobile-slider@1x.webp 1x, ../img/drink2go-mobile-slider@2x.webp 2x">
+              <img class="project__image project__image--s" src="../img/drink2go-mobile-slider@1x.png"
+                srcset="../img/drink2go-mobile-slider@2x.png 2x" width="812" height="725" loading="lazy" alt="Слайдер на сайте Дринк Ту Гоу. Слева закрытое, справа открытое">
+            </picture>
+            <h3 class="project__subtitle">Адаптивная графика</h3>
+            <p class="project__text">
+              Выполнено кадрирование контентных изображений для загрузки определенных изображений в зависимости от разрешения экрана устройства пользователя.
+            </p>
+            <p class="project__text">
+              Растровая графика в проекте подготовлена для двух вариантов экранов: с обычной и двойной плотностью пикселей.
+            </p>
+            <h3 class="project__subtitle">Интерактивные карты</h3>
+            <p class="project__text">
+              Интерактивные карты в проекте реализованы с использованием API Яндекс Карт.
+            </p>
+            <picture>
+              <source type="image/webp"
+                srcset="../img/drink2go-mobile-map@1x.webp 1x, ../img/drink2go-mobile-map@2x.webp 2x">
+              <img class="project__image project__image--xs" src="../img/drink2go-mobile-map@1x.png"
+                srcset="../img/drink2go-mobile-map@2x.png 2x" width="356" height="725" loading="lazy" alt="Интерактивная карта на сайте Дринк Ту Гоу.">
+            </picture>
+            <p class="project__text">
+              На случай отказа работоспособности JavaScript предусмотрено отображение изображения карты.
+            </p>
+            <picture>
+              <source type="image/webp"
+                srcset="../img/drink2go-mobile-map-nojs@1x.webp 1x, ../img/drink2go-mobile-map-nojs@2x.webp 2x">
+              <img class="project__image project__image--xs" src="../img/drink2go-mobile-map-nojs@1x.png"
+                srcset="../img/drink2go-mobile-map-nojs@2x.png 2x" width="356" height="725" loading="lazy" alt="Изображение карты на сайте Дринк Ту Гоу.">
+            </picture>
+            <h3 class="project__subtitle">Мобильное меню</h3>
+            <p class="project__text">
+              Мобильное меню реализовано с использованием нативного JavaScript, и работает по класической схеме: по клику на бургер - открывается, на крестик - закрывается.
+            </p>
+            <picture>
+              <source type="image/webp"
+                srcset="../img/drink2go-mobile-menu@1x.webp 1x, ../img/drink2go-mobile-menu@2x.webp 2x">
+              <img class="project__image project__image--s" src="../img/drink2go-mobile-menu@1x.png"
+                srcset="../img/drink2go-mobile-menu@2x.png 2x" width="812" height="725" loading="lazy" alt="Мобильное меню на сайте Дринк Ту Гоу. Слева закрытое, справа открытое">
+            </picture>
+            <p class="project__text">
+              На случай отказа работоспособности JavaScript предусмотрено статическое отображение мобильного меню в открытом состоянии.
+            </p>
+            <picture>
+              <source type="image/webp"
+                srcset="../img/drink2go-mobile-menu-nojs@1x.webp 1x, ../img/drink2go-mobile-menu-nojs@2x.webp 2x">
+              <img class="project__image project__image--xs" src="../img/drink2go-mobile-menu-nojs@1x.png"
+                srcset="../img/drink2go-mobile-menu-nojs@2x.png 2x" width="356" height="725" loading="lazy" alt="Статичное мобильное меню на сайте Дринк Ту Гоу в открытом виде.">
+            </picture>
+            <h3 class="project__subtitle">Оптимизация</h3>
+            <p class="project__text">
+              Для браузеров, поддерживающих формат WebP, в проекте подготовлены контентные изображения в данном формате.
+            </p>
+            <p class="project__text">
+              Векторные изображения на странице объединены в спрайт.
+            </p>
+            <p class="project__text">
+              Реализована предзагрузка шрифтов.
+            </p>
+            <h3 class="project__subtitle">Кроссбраузерность</h3>
+            <p class="project__text">
+              Все страницы и элементы сайта идентично отображаются в последних версиях браузеров Chrome, Firefox, Safari.
+            </p>
           </div>
         </section>
-        <section class="technologies content">
-          <div class="technologies__container content__container">
-            <h2 class="technologies__title content__title">Технические особенности</h2>
-
-          </div>
-        </section>
-
       </div>
     </main>
+    <script src="../vendor/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="../js/main.js" type="module"></script>
   </body>
 </html>
